--- a/Keras Quantile Model.ipynb
+++ b/Keras Quantile Model.ipynb
@@ -137,7 +137,9 @@
     "where $\\alpha$ is the required quantile and $\\xi_i = y_i - f(\\mathbf{x}_i)$ and, $f(\\mathbf{x}_i)$ is the predicted (quantile) model. The final overall loss is defines as:\n",
     "$$\\mathcal{L}(\\mathbf{y},\\mathbf{f}|\\alpha)=\\frac{1}{N} \\sum_{i=1}^N \\mathcal{L}(y_i-f(\\mathbf{x}_i)|\\alpha)$$\n",
     "\n",
-    "The following function defines the loss function for a quantile model."
+    "The following function defines the loss function for a quantile model.\n",
+    "\n",
+    "**Note**: The following 4 lines is ALL that you change in comparison to a normal Deep Learning method, i.e. The loss function is all that changes."
    ]
   },
   {
